fixed login button, lists now correctly overflow on large number of items, fixed bug with category deletion

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,8 +6,12 @@
 background-color: #F3FFBD;	
 }
 .listColor{
-	background-color: #c5e3ed;
+background-color: #c5e3ed;
 	
+}
+.maxHeight{
+	max-height: 100vh;
+    overflow: auto;	
 }
 
 #mask{
